--- a/my_market_app/pubspec.yaml
+++ b/my_market_app/pubspec.yaml
@@ -35,10 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   percent_indicator: ^4.2.2
-  shared_preferences: ^2.5.2
   http: ^1.4.0
   # untuk fitur tambahan safety
   bcrypt: ^1.1.3 
+  shared_preferences: ^2.5.2
+  image_picker: ^1.1.2
+  sqflite: ^2.4.2
+  path: ^1.8.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
