--- a/my_market_app/pubspec.yaml
+++ b/my_market_app/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.8.0
   intl: ^0.18.1
+  midtrans_sdk: ^1.0.1
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +62,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  plugin:
+    platforms:
+      android:
+        package: com.example.my_market_app
+        pluginClass: MidtransSdkPlugin
+      ios:
+        pluginClass: MidtransSdkPlugin
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -70,6 +79,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
