--- a/my_market_app/pubspec.yaml
+++ b/my_market_app/pubspec.yaml
@@ -38,13 +38,15 @@ dependencies:
   http: ^1.4.0
   # untuk fitur tambahan safety
   bcrypt: ^1.1.3 
-  shared_preferences: ^2.5.2
-  image_picker: ^1.1.2
-  sqflite: ^2.4.2
   path: ^1.8.0
   intl: ^0.18.1
   midtrans_sdk: ^1.0.1
   flutter_dotenv: ^5.2.1
+  flutter_plugin_android_lifecycle: ^2.0.28
+  sqflite: ^2.4.2
+  image_picker: ^1.1.2
+  shared_preferences: ^2.5.3
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
